# crewAI_res

./: README.md
crewai_hr_agent/: README.md  pyproject.toml
crewai_hr_agent/output/: company_research.json  final_report.md  job_analysis.json  optimized_resume.md  resume.txt  resume_optimization.json
crewai_hr_agent/src/crewai_hr_agent/: crew.py  main.py  models.py
crewai_hr_agent/src/crewai_hr_agent/config/: agents.yaml  tasks.yaml
