[project]
name = "crewai_hr_agent"
version = "0.1.0"
description = "crewai_hr_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0"
]

[project.scripts]
crewai_hr_agent = "crewai_hr_agent.main:run"
run_crew = "crewai_hr_agent.main:run"
train = "crewai_hr_agent.main:train"
replay = "crewai_hr_agent.main:replay"
test = "crewai_hr_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
